fixes overlay bug where piano covers up scale notes

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,15 +40,18 @@ input {
 }
 
 .c, .csharp, .d, .dsharp, .e, .f, .fsharp, .g, .aflat, .a, .asharp, .b {
- display:none;
-
+  display: none;
 }
+/* 
+#results {
+  z-index: 2;
+} */
 
 #results img{
   height:50%;
   width: 50%;
-  z-index: 2;
-  margin-top: 10px;
+  margin-top: 2em;
+  z-index: 1;
 }
 
 .container {
@@ -57,12 +60,11 @@ input {
 }
 
 .piano {
-  top: 85px;
   position: relative;
   width: 100%;
   height: 100%;
   display: block;
-  margin-top: 20px;
+  margin-top: 3em;
   border-radius: 17px;
   z-index: 1;
   background-image: url("../img/gradient-2.png");
